# CppGit

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Config.cmake.in  Doxyfile  LICENSE  README.md  annotated.html  classes.html  codechecker_config.yml  codechecker_skipfile.txt  dir_000001_000000.html  dir_2a6ea06fd2fbe5baef93b411636e2da7.html  dir_2a6ea06fd2fbe5baef93b411636e2da7_dep.map  dir_2a6ea06fd2fbe5baef93b411636e2da7_dep.md5  dir_61b7d2ebdc9ed59de9554733c2fa2853.html  dir_61b7d2ebdc9ed59de9554733c2fa2853_dep.map  dir_61b7d2ebdc9ed59de9554733c2fa2853_dep.md5  dir_c30773a8742218d131b87a97dc50a923.html  dir_c30773a8742218d131b87a97dc50a923_dep.map  dir_c30773a8742218d131b87a97dc50a923_dep.md5  dir_c554dd4a7754e725a97fc5de00e9b795.html  dir_c554dd4a7754e725a97fc5de00e9b795_dep.map  dir_c554dd4a7754e725a97fc5de00e9b795_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  doxygen_crawl.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_f.html  functions_func.html  (+105 more)
.github/workflows/: build_and_deploy_doxygen.yaml  build_ubuntu_gcc.yaml
analysis_scripts/: run_asan.sh  run_codechecker.sh  run_ubsan.sh  run_valgrind.sh
d0/d15/: classCppGit_1_1Commit-members.html
d0/d22/: Rebaser_8hpp.html  Rebaser_8hpp_source.html
d0/d3d/: RebaseFilesHelper_8hpp.html  RebaseFilesHelper_8hpp_source.html
d0/d3f/: ThreeWayMerger_8hpp__dep__incl.map  ThreeWayMerger_8hpp__dep__incl.md5
d0/d45/: CommitsManager_8hpp__incl.map  CommitsManager_8hpp__incl.md5
d0/d48/: Signature_8hpp__dep__incl.map  Signature_8hpp__dep__incl.md5
d0/d62/: classCppGit_1_1BranchesManager-members.html
d0/d73/: CommitsManager_8hpp__dep__incl.map  CommitsManager_8hpp__dep__incl.md5
d0/d7d/: CherryPicker_8hpp__dep__incl.map  CherryPicker_8hpp__dep__incl.md5  IndexWorktreeManager_8hpp.html  IndexWorktreeManager_8hpp_source.html
d0/d80/: Signature_8hpp__incl.map  Signature_8hpp__incl.md5
d0/d9f/: classCppGit_1_1CherryPicker.html
d0/da6/: classCppGit_1_1__details_1_1ThreeWayMerger.html
d0/db3/: ReferencesManager_8hpp__dep__incl.map  ReferencesManager_8hpp__dep__incl.md5
d0/df2/: classCppGit_1_1__details_1_1DiffApplier.html
d1/d14/: classCppGit_1_1GitCommandExecutor__inherit__graph.map  classCppGit_1_1GitCommandExecutor__inherit__graph.md5
d1/d17/: IndexManager_8hpp__dep__incl.map  IndexManager_8hpp__dep__incl.md5
d1/d1f/: Repository_8hpp__incl.map  Repository_8hpp__incl.md5
d1/d22/: Rebaser_8hpp__dep__incl.map  Rebaser_8hpp__dep__incl.md5
d1/d44/: ReferencesManager_8hpp.html  ReferencesManager_8hpp_source.html
d1/d66/: DiffParser_8hpp.html  DiffParser_8hpp_source.html
d1/d8e/: RebaseTodoCommand_8hpp__incl.map  RebaseTodoCommand_8hpp__incl.md5
d1/daa/: RebaseTodoCommand_8hpp__dep__incl.map  RebaseTodoCommand_8hpp__dep__incl.md5
d2/d00/: structCppGit_1_1GitCommandOutput-members.html
d2/d65/: CommitCreator_8hpp.html  CommitCreator_8hpp_source.html
d2/d67/: GitCommandExecutorUnix_8hpp__dep__incl.map  GitCommandExecutorUnix_8hpp__dep__incl.md5
d2/d84/: classCppGit_1_1BranchesParser.html
d2/d99/: ThreeWayMerger_8hpp__incl.map  ThreeWayMerger_8hpp__incl.md5
d2/dab/: classCppGit_1_1BranchesParser__coll__graph.map  classCppGit_1_1BranchesParser__coll__graph.md5
d2/db3/: GitCommandExecutor_8hpp__dep__incl.map  GitCommandExecutor_8hpp__dep__incl.md5
d2/dbd/: classCppGit_1_1Resetter.html
d2/df2/: classCppGit_1_1__details_1_1RebaseFilesHelper.html
d3/d00/: BranchesManager_8hpp__incl.map  BranchesManager_8hpp__incl.md5
d3/d13/: IndexParser_8hpp.html  IndexParser_8hpp_source.html  structCppGit_1_1Signature-members.html
d3/d24/: structCppGit_1_1GitCommandOutput.html
d3/d2b/: Commit_8hpp.html  Commit_8hpp_source.html
examples/: readme-example.cpp
include/: Branch.hpp  Branches.hpp  CherryPick.hpp  Commit.hpp  CommitParser.hpp  Commits.hpp  CommitsHistory.hpp  Diff.hpp  DiffFile.hpp  Error.hpp  ErrorCodes.hpp  Exceptions.hpp  GitCommandExecutor.hpp  Index.hpp  Merge.hpp  Rebase.hpp  RebaseTodoCommand.hpp  Repository.hpp  Signature.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+61 more)
src/: Branch.cpp  Branches.cpp  BranchesManager.cpp  CherryPick.cpp  CherryPicker.cpp  Commit.cpp  CommitParser.cpp  Commits.cpp  CommitsHistory.cpp  CommitsLog.cpp  CommitsLogManager.cpp  CommitsManager.cpp  Diff.cpp  DiffGenerator.cpp  GitCommandExecutor.cpp  Index.cpp  IndexManager.cpp  Merge.cpp  Merger.cpp  Rebase.cpp  Rebaser.cpp  Repository.cpp  Reset.cpp  Resetter.cpp  main.cpp
tests/: BranchesParser_tests.cpp  CMakeLists.txt  CommitParser_tests.cpp
tests/integration_tests/: BaseRepositoryFixture.cpp  BaseRepositoryFixture.hpp  Branches_tests.cpp  CMakeLists.txt  CherryPick_tests.cpp  CommitsHistory_tests.cpp  CommitsLog_tests.cpp  Commits_tests.cpp  Diff_tests.cpp  Index_tests.cpp  InitRepository_tests.cpp  Merge_tests.cpp  Rebase_tests.cpp  Reset_tests.cpp
tests/integration_tests/Rebase_tests/: RebaseFixture.hpp  Rebase_basic_tests.cpp  Rebase_interactive_Break_tests.cpp  Rebase_interactive_Drop_tests.cpp  Rebase_interactive_Edit_tests.cpp  Rebase_interactive_FixupSquash_tests.cpp  Rebase_interactive_Fixup_tests.cpp  Rebase_interactive_Reword_tests.cpp  Rebase_interactive_SquashFixup_tests.cpp  Rebase_interactive_Squash_tests.cpp  Rebase_interactive_basic_tests.cpp
tests/unit_tests/: BranchesParser_tests.cpp  CMakeLists.txt  CommitParser_tests.cpp  DiffParser_tests.cpp  IndexParser_tests.cpp  Parser_tests.cpp
(+312 files in other folders)
